<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/back2"
    tools:context="ram.android.myhabittracker.MainActivity"
    android:weightSum="1">




    <EditText
        android:layout_width="match_parent"
        android:ems="10"
        android:id="@+id/personEditText"
        android:hint="@string/hobby1"
        android:inputType="textPersonName"
        android:layout_height="wrap_content"
        />
    <EditText
        android:layout_width="match_parent"
        android:ems="10"
        android:id="@+id/habitDuration"
        android:hint="@string/dur1"
        android:inputType="textPersonName"
        android:layout_height="wrap_content"
        />




    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create" />
    <EditText
        android:layout_width="match_parent"
        android:ems="10"
        android:id="@+id/search"
        android:hint="@string/search"
        android:inputType="textPersonName"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dur2"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#000000"
        android:textStyle="italic"
        android:textColorHint="@android:color/black" />
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num" />
</LinearLayout>
